# -python-_task_manager

./: .gitignore  Makefile  README.md  db.sqlite3  my-local-sqlite.db  pyproject.toml  render.yaml  setup.cfg
.github/workflows/: tarakanov-check.yml
base/: forms.py  urls.py  views.py
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
manager/: urls.py  views.py
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_status_created_at.py  0003_alter_status_created_at.py  0004_alter_status_created_at.py  0005_alter_status_created_at.py  0006_alter_status_created_at.py  0007_status_author.py  0008_alter_status_status_name.py  0009_alter_status_author.py  0010_alter_status_author.py  0011_alter_status_author.py  0012_alter_status_author_alter_status_status_name.py  0013_remove_status_author.py
task_manager/: settings.py  urls.py  views.py
tasks/: forms.py  models.py  support_functions.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_author.py  0002_alter_task_description_alter_task_name.py  0002_rename_status_id_task_status.py  0002_task_executor_fullname.py  0003_remove_task_author_fullname_and_more.py  0003_rename_name_task_task_name.py  0004_task_user.py  0005_rename_user_task_executor.py  0006_task_labels.py  0007_alter_task_author.py  0008_alter_task_author.py
templates/auth/: user_confirm_delete.html
templates/base/: base.html  index.html  (+1 more)
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+54 files in other folders)
